updating accessRights logique to from user-based to user-role-based